Bug 787017. Die more verbosely on Android during Layers init. r=bjacob

This might give us some more information on what's happening.